--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "redux": "^5.0.1",
     "velora-store-website": "file:"
   },
   "devDependencies": {
