--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.7",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "redux": "^5.0.1",
+    "tailwindcss": "^4.1.7",
     "velora-store-website": "file:"
   },
   "devDependencies": {
